Fix position of first Add content button when structure is set to Blocks
The button was positioned too far down due to padding top that should
not exist for that button

--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-editor.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-editor.less
@@ -84,6 +84,10 @@
             &:hover, &--visible {
                 .empty_hover_visible;
             }
+
+            &--no-padding-top, &--no-padding-top:hover {
+                padding-top: 0;
+            }
         }
 
         &--header &__hover {
